# wheatley-rust

./: Cargo.toml  damage.toml  index.html  map.toml  monsters.toml  wheatley-rust.js  wheatley-rust.wasm
src/: colors.rs  combat.rs  game.rs  loader.rs  main.rs  map.rs  monster.rs  player.rs  point.rs  screen.rs  tile.rs  util.rs
src/map/: gen.rs  tile.rs
src/screen/: game.rs  menu.rs  textbox.rs
static/: damage.toml  map.toml  monsters.toml  settings.toml
