[package]
name = "wheatley-rust"
version = "0.1.0"
authors = ["Paul Maynard <Paul.Maynard001@umb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
rand = "0.7.3"
rand_pcg = "0.2.1"
rand_distr = "0.2.2"
doryen-rs = "1.2.3"
doryen-fov = "0.1.1"
# doryen-extra = "0.1.0"
