[package]
name = "wheatley-rust"
version = "0.1.0"
authors = ["Paul Maynard <Paul.Maynard001@umb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
doryen-rs = "1.2.3"
doryen-fov = "0.1.1"
# patched version that makes random structs public
doryen-extra = { git = "https://github.com/IronCretin/doryen-extra", features = ["rng_support"] }
toml = "0.5.6"
serde = { version = "1.0.111", features = ["derive", "rc"] }
serde_derive = "1.0.111"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.20"
getrandom = { version = "0.1.14", features = ["stdweb"] }
